--- a/session2/Homework.html
+++ b/session2/Homework.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="random2.js"></script>
-    <script src="index.js"></script>
-    <script src="random.js"></script>
-    <script src="SNT.js"></script>
+    <script src="Homework.js"></script>
 </body>
 </html>
